parser/parser.go
package parser

import (
	"encoding/json"
	"fmt"
	"gada/lexer"
	"gada/token"
	"github.com/charmbracelet/log"
	"os"
	"strconv"
)

type Parser struct {
	lexer *lexer.Lexer
	index int
}

type Node struct {
	Type     string
	Index    int
	Children []*Node
}

var logger *log.Logger

func init() {
	logger = log.New(os.Stderr)
}

func (n *Node) addChild(child Node) {
	n.Children = append(n.Children, &child)
}

func (n *Node) toJson() string {
	b, err := json.MarshalIndent(n, "", "  ")
	if err != nil {
		fmt.Println(err)
	}
	return string(b)
}

func (p *Parser) unreadToken() {
	if p.index <= 0 {
		panic("Cannot unread token")
	}
	p.index--
}

func (p *Parser) unreadTokens(nb int) {
	if p.index-nb < 0 {
		panic("Cannot unread token")
	}
	p.index -= nb
}

func (p *Parser) readToken() token.Token {
	if p.index >= len(p.lexer.Tokens) {
		return token.EOF
	}
	p.index++
	return token.Token(p.lexer.Tokens[p.index-1].Value)
}

func (p *Parser) readFullToken() (token.Token, int) {
	if p.index >= len(p.lexer.Tokens) {
		return token.EOF, -1
	}
	p.index++
	return token.Token(p.lexer.Tokens[p.index-1].Value), p.lexer.Tokens[p.index-1].Position
}

func (p *Parser) peekToken() token.Token {
	if p.index >= len(p.lexer.Tokens) {
		return token.EOF
	}
	return token.Token(p.lexer.Tokens[p.index].Value)
}

func (p *Parser) printTokensBefore(i int) {
	for j := i - 1; j >= 0; j-- {
		t := token.Token(p.lexer.Tokens[p.index-j].Value)
		if t == token.IDENT {
			fmt.Print(p.lexer.Lexi[p.lexer.Tokens[p.index-j].Position-1], " ")
			continue
		}
		fmt.Print(token.Token(p.lexer.Tokens[p.index-j].Value), " ")
	}
	fmt.Println()
}

func Parse(lexer *lexer.Lexer, printAst bool) {
	parser := Parser{lexer: lexer, index: 0}
	node := readFichier(&parser)
	graph := toAst(node)
	os.WriteFile("./test/parser/ast.json", []byte(graph.toJson()), 0644)
	logger.Info("Compilation successful")
	if printAst {
		logger.Info("Compilation output", "ast", graph.toJson())
	}
}

func expectToken(parser *Parser, tkn token.Token) {
	if parser.peekToken() != tkn {
		// Wait for the peek since EOF is added by this method
		red := "\x1b[0;31m"
		reset := "\x1b[0m"
		line := parser.lexer.Tokens[parser.index].Beginning.Line
		column := parser.lexer.Tokens[parser.index].Beginning.Column
		file := parser.lexer.FileName + ":" + strconv.Itoa(line) + ":" + strconv.Itoa(column)
		if parser.peekToken() == token.IDENT {
			logger.Fatal("Unexpected token", "expected", tkn, "got", parser.lexer.Lexi[parser.lexer.Tokens[parser.index].Position-1])
		}
		logger.Fatal(file+" "+"Unexpected token: "+parser.lexer.GetLineUpToToken(parser.lexer.Tokens[parser.index])+red+parser.lexer.GetToken(parser.lexer.Tokens[parser.index])+reset, "expected", tkn, "got", parser.peekToken())
	}
	parser.readToken()
}

func peekExpectToken(parser *Parser, tkn token.Token) {
	if parser.peekToken() != tkn {
		logger.Fatal("Unexpected token", "expected", tkn, "got", parser.peekToken())
	}
}

func expectTokenIdent(parser *Parser, ident string) string {
	if parser.peekToken() != token.IDENT {
		logger.Fatal("Unexpected token", "expected", token.IDENT, "got", parser.peekToken())
	}
	_, index := parser.readFullToken()
	if parser.lexer.Lexi[index-1] != ident {
		logger.Fatal("Unexpected token", "expected", ident, "got", parser.lexer.Lexi[index-1])
	}
	return parser.lexer.Lexi[index-1]
}

func expectTokens(parser *Parser, tkns []any) {
	for _, tkn := range tkns {
		if t, ok := tkn.(int); ok {
			expectToken(parser, token.Token(t))
		} else {
			// expect identifier with name tkn
			expectTokenIdent(parser, tkn.(string))
		}
	}
}

func readFichier(parser *Parser) Node {
	node := Node{Type: "Fichier"}

	expectTokens(parser, []any{token.WITH, "Ada", token.PERIOD, "Text_IO", token.SEMICOLON, token.USE, "Ada", token.PERIOD, "Text_IO", token.SEMICOLON, token.PROCEDURE})

	node.addChild(readIdent(parser))
	expectTokens(parser, []any{token.IS})
	node.addChild(readDeclStar(parser))
	expectTokens(parser, []any{token.BEGIN})
	node.addChild(readInstr_plus(parser))
	expectTokens(parser, []any{token.END})
	node.addChild(readIdent_opt(parser))
	expectTokens(parser, []any{token.SEMICOLON, token.EOF})
	return node
}

func readDecl(parser *Parser) Node {
	var node Node
	switch parser.peekToken() {
	case token.PROCEDURE:
		parser.readToken()
		node = Node{Type: "DeclProcedure"}
		node.addChild(readIdent(parser))
		node.addChild(readParams_opt(parser))
		expectTokens(parser, []any{token.IS})
		node.addChild(readDeclStar(parser))
		expectTokens(parser, []any{token.BEGIN})
		node.addChild(readInstr_plus(parser))
		expectTokens(parser, []any{token.END})
		node.addChild(readIdent_opt(parser))
		expectTokens(parser, []any{token.SEMICOLON})
	case token.TYPE:
		parser.readToken()
		node = Node{Type: "DeclType"}
		node.addChild(readIdent(parser))
		node.addChild(readDecl2(parser))
	case token.FUNCTION:
		parser.readToken()
		node = Node{Type: "DeclFunction"}
		node.addChild(readIdent(parser))
		node.addChild(readParams_opt(parser))
		expectTokens(parser, []any{token.RETURN})
		node.addChild(readType_r(parser))
		expectTokens(parser, []any{token.IS})
		node.addChild(readDeclStar(parser))
		expectTokens(parser, []any{token.BEGIN})
		node.addChild(readInstr_plus(parser))
		expectTokens(parser, []any{token.END})
		node.addChild(readIdent_opt(parser))
		expectTokens(parser, []any{token.SEMICOLON})
	case token.IDENT:
		node = Node{Type: "DeclVar"}
		node.addChild(readIdent_plus_comma(parser))
		expectTokens(parser, []any{token.COLON})
		node.addChild(readType_r(parser))
		node.addChild(readInit(parser))
		expectTokens(parser, []any{token.SEMICOLON})
	default:
		logger.Fatal("Unexpected token", "possible", "procedure type function ident", "got", parser.peekToken())
	}
	return node
}

func readDecl2(parser *Parser) Node {
	var node Node
	switch parser.readToken() {
	case token.IS:
		node = Node{Type: "DeclTypeIs"}
		node.addChild(readDecl3(parser))
	case token.SEMICOLON:
		node = Node{Type: "DeclTypeSemicolon"}
	default:
		logger.Fatal("Unexpected token", "possible", "is ;", "got", parser.peekToken())
	}
	return node
}

func readDecl3(parser *Parser) Node {
	var node Node
	switch parser.readToken() {
	case token.ACCESS:
		node = Node{Type: "DeclTypeAccess"}
		node.addChild(readIdent(parser))
		expectTokens(parser, []any{token.SEMICOLON})
	case token.RECORD:
		node = Node{Type: "DeclTypeRecord"}
		node.addChild(readChampsPlus(parser))
		expectTokens(parser, []any{token.END, token.RECORD, token.SEMICOLON})
	default:
		logger.Fatal("Unexpected token", "possible", "access record", "got", parser.peekToken())
	}
	return node
}

func readInit(parser *Parser) Node {
	var node Node
	switch parser.peekToken() {
	case token.SEMICOLON:
		node = Node{Type: "InitSemicolon"}
	case token.COLON:
		expectTokens(parser, []any{token.COLON, token.EQL})
		node = Node{Type: "Init"}
		node.addChild(readExpr(parser))
	default:
		logger.Fatal("Unexpected token", "possible", "; :", "got", parser.peekToken())
	}
	return node
}

func readDeclStar(parser *Parser) Node {
	var node Node
	switch parser.peekToken() {
	case token.PROCEDURE, token.IDENT, token.TYPE, token.FUNCTION:
		node = Node{Type: "DeclStarProcedure"}
		node.addChild(readDecl(parser))
		node.addChild(readDeclStar(parser))
	case token.BEGIN:
		node = Node{Type: "DeclStarBegin"}
	default:
		logger.Fatal("Unexpected token", "possible", "procedure ident type function begin", "got", parser.peekToken())
	}
	return node
}

func readChamps(parser *Parser) Node {
	peekExpectToken(parser, token.IDENT)

	node := Node{Type: "Champs"}
	node.addChild(readIdent_plus_comma(parser))

	expectTokens(parser, []any{token.COLON})
	node.addChild(readType_r(parser))
	expectTokens(parser, []any{token.SEMICOLON})
	return node
}

func readChampsPlus(parser *Parser) Node {
	peekExpectToken(parser, token.IDENT)

	node := Node{Type: "ChampsPlus"}
	node.addChild(readChamps(parser))
	node.addChild(readChampsPlus2(parser))
	return node
}

func readChampsPlus2(parser *Parser) Node {
	var node Node
	var tkn = parser.readToken()
	switch tkn {
	case token.IDENT:
		node = Node{Type: "ChampsPlus2"}
		node.addChild(readChamps(parser))
		node.addChild(readChampsPlus2(parser))
	case token.END:
		node = Node{Type: "ChampsPlus2End"}
	default:
		logger.Fatal("Unexpected token", "possible", "ident end", "got", tkn)
	}
	return node
}

func readType_r(parser *Parser) Node {
	var node Node
	switch parser.peekToken() {
	case token.IDENT:
		node = Node{Type: "TypeRIdent"}
		node.addChild(readIdent(parser))
	case token.ACCESS:
		parser.readToken()

		node = Node{Type: "TypeRAccess"}
		node.addChild(readIdent(parser))
	default:
		logger.Fatal("Unexpected token", "possible", "ident access", "got", parser.peekToken())
	}
	return node
}

func readParams(parser *Parser) Node {
	expectToken(parser, token.LPAREN)

	node := Node{Type: "Params"}
	node.addChild(readParamPlusSemicolon(parser))

	expectTokens(parser, []any{token.RPAREN})
	return node
}

func readParams_opt(parser *Parser) Node {
	var node Node
	switch parser.peekToken() {
	case token.IS, token.RETURN:
		node = Node{Type: "ParamsOpt"}
	case token.LPAREN:
		node = Node{Type: "ParamsOptParams"}
		node.addChild(readParams(parser))
	default:
		logger.Fatal("Unexpected token", "possible", "is return (", "got", parser.peekToken())
	}
	return node
}

func readParam(parser *Parser) Node {
	peekExpectToken(parser, token.IDENT)

	node := Node{Type: "Param"}
	node.addChild(readIdent_plus_comma(parser))

	expectTokens(parser, []any{token.COLON})

	node.addChild(readModeOpt(parser))
	node.addChild(readType_r(parser))
	return node
}

func readParamPlusSemicolon(parser *Parser) Node {
	peekExpectToken(parser, token.IDENT)

	node := Node{Type: "ParamPlusSemicolon"}
	node.addChild(readParam(parser))
	node.addChild(readParamPlusSemicolon2(parser))

	return node
}

func readParamPlusSemicolon2(parser *Parser) Node {
	var node Node
	switch parser.peekToken() {
	case token.SEMICOLON:
		parser.readToken()
		node = Node{Type: "ParamPlusSemicolon2"}
		node.addChild(readParam(parser))
		node.addChild(readParamPlusSemicolon2(parser))
	case token.RPAREN:
		node = Node{Type: "ParamPlusSemicolon2RParen"}
	default:
		logger.Fatal("Unexpected token", "possible", "; )", "got", parser.peekToken())
	}
	return node
}

func readMode(parser *Parser) Node {
	expectToken(parser, token.IN)
	node := Node{Type: "ModeIn"}
	node.addChild(readMode2(parser))
	return node
}

func readMode2(parser *Parser) Node {
	var node Node
	switch parser.readToken() {
	case token.IDENT, token.ACCESS:
		node = Node{Type: "Mode2Ident"}
	case token.OUT:
		node = Node{Type: "Mode2Out"}
	default:
		logger.Fatal("Unexpected token", "possible", "ident access out", "got", parser.peekToken())
	}
	return node
}

func readModeOpt(parser *Parser) Node {
	var node Node
	switch parser.peekToken() {
	case token.IDENT, token.ACCESS:
		node = Node{Type: "ModeOpt"}
	case token.IN:
		node = Node{Type: "ModeOptMode"}
		node.addChild(readMode(parser))
	default:
		logger.Fatal("Unexpected token", "possible", "ident access in", "got", parser.peekToken())
	}
	return node
}

func readExpr(parser *Parser) Node {
	var node Node
	switch parser.peekToken() {
	case token.IDENT, token.LPAREN, token.NOT, token.SUB, token.INT, token.CHAR, token.TRUE, token.FALSE, token.NULL, token.NEW, token.CHAR_TOK:
		node = Node{Type: "ExprIdent"}
		node.addChild(readOr_expr(parser))
	default:
		logger.Fatal("Unexpected token", "possible", "ident ( not - int char true false null new char", "got", parser.peekToken())
	}
	return node
}

func readOr_expr(parser *Parser) Node {
	var node Node
	switch parser.peekToken() {
	case token.IDENT, token.LPAREN, token.NOT, token.SUB, token.INT, token.CHAR, token.TRUE, token.FALSE, token.NULL, token.NEW, token.CHAR_TOK:
		node = Node{Type: "OrExpr"}
		node.addChild(readAnd_expr(parser))
		node.addChild(readOr_expr_tail(parser))
	default:
		logger.Fatal("Unexpected token", "possible", "ident ( not - int char true false null new char", "got", parser.peekToken())
	}
	return node
}

func readOr_expr_tail(parser *Parser) Node {
	var node Node
	switch parser.peekToken() {
	case token.OR:
		parser.readToken()
		node = Node{Type: "OrExprTailOr"}
		node.addChild(readOr_expr_tail2(parser))
	case token.SEMICOLON, token.RPAREN, token.THEN, token.COMMA, token.LOOP:
		node = Node{Type: "OrExprTail"}
	case token.PERIOD:
		node = Node{Type: "OrExprTailPeriod"}
		parser.readToken()
		expectTokens(parser, []any{token.PERIOD})
		parser.readToken()
	default:
		logger.Fatal("Unexpected token", "possible", "or ; ) then , loop .", "got", parser.peekToken())
	}
	return node
}

func readOr_expr_tail2(parser *Parser) Node {
	var node Node
	switch parser.peekToken() {
	case token.ELSE:
		parser.readToken()
		node = Node{Type: "OrExprTail2Else"}
		node.addChild(readAnd_expr(parser))
		node.addChild(readOr_expr_tail(parser))
	case token.IDENT, token.LPAREN, token.NOT, token.SUB, token.INT, token.CHAR, token.TRUE, token.FALSE, token.NULL, token.NEW, token.CHAR_TOK:
		node = Node{Type: "OrExprTail2"}
		node.addChild(readAnd_expr(parser))
		node.addChild(readOr_expr_tail(parser))
	default:
		logger.Fatal("Unexpected token", "possible", "else ident ( not - int char true false null new char", "got", parser.peekToken())
	}
	return node
}

func readAnd_expr(parser *Parser) Node {
	var node Node
	switch parser.peekToken() {
	case token.IDENT, token.LPAREN, token.NOT, token.SUB, token.INT, token.CHAR, token.TRUE, token.FALSE, token.NULL, token.NEW, token.CHAR_TOK:
		node = Node{Type: "AndExpr"}
		node.addChild(readEquality_expr(parser))
		node.addChild(readAnd_expr_tail(parser))
	default:
		logger.Fatal("Unexpected token", "possible", "ident ( not - int char true false null new char", "got", parser.peekToken())
	}
	return node
}

func readAnd_expr_tail(parser *Parser) Node {
	var node Node
	switch parser.peekToken() {
	case token.AND:
		parser.readToken()
		node = Node{Type: "AndExprTailAnd"}
		node.addChild(readAnd_expr_tail2(parser))
	case token.SEMICOLON, token.RPAREN, token.OR, token.THEN, token.COMMA, token.LOOP:
		node = Node{Type: "AndExprTail"}
	case token.PERIOD:
		node = Node{Type: "AndExprTailPeriod"}
		parser.readToken()
		expectTokens(parser, []any{token.PERIOD})
		parser.readToken()
	default:
		logger.Fatal("Unexpected token", "possible", "and ; ) or then , loop .", "got", parser.peekToken())
	}
	return node
}

func readAnd_expr_tail2(parser *Parser) Node {
	var node Node
	switch parser.peekToken() {
	case token.THEN:
		parser.readToken()
		node = Node{Type: "AndExprTail2Then"}
		node.addChild(readEquality_expr(parser))
		node.addChild(readAnd_expr_tail(parser))
	case token.IDENT, token.LPAREN, token.NOT, token.SUB, token.INT, token.CHAR, token.TRUE, token.FALSE, token.NULL, token.NEW, token.CHAR_TOK:
		node = Node{Type: "AndExprTail2"}
		node.addChild(readNot_expr(parser))
		node.addChild(readAnd_expr_tail(parser))
	default:
		logger.Fatal("Unexpected token", "possible", "then ident ( not - int char true false null new char", "got", parser.peekToken())
	}
	return node
}

func readNot_expr(parser *Parser) Node {
	var node Node
	switch parser.peekToken() {
	case token.IDENT, token.LPAREN, token.NOT, token.SUB, token.INT, token.CHAR, token.TRUE, token.FALSE, token.NULL, token.NEW, token.CHAR_TOK:
		node = Node{Type: "NotExpr"}
		node.addChild(readEquality_expr(parser))
		node.addChild(readNot_expr_tail(parser))
	default:
		logger.Fatal("Unexpected token", "possible", "ident ( not - int char true false null new char", "got", parser.peekToken())
	}
	return node
}

func readNot_expr_tail(parser *Parser) Node {
	var node Node
	switch parser.peekToken() {
	case token.NOT:
		parser.readToken()
		node = Node{Type: "NotExprTailNot"}
		node.addChild(readEquality_expr(parser))
		node.addChild(readNot_expr_tail(parser))
	case token.SEMICOLON, token.RPAREN, token.OR, token.AND, token.THEN, token.COMMA, token.LOOP:
		node = Node{Type: "NotExprTail"}
	case token.PERIOD:
		node = Node{Type: "NotExprTailPeriod"}
		parser.readToken()
		expectTokens(parser, []any{token.PERIOD})
		parser.readToken()
	default:
		logger.Fatal("Unexpected token", "possible", "not ; ) or and then , loop .", "got", parser.peekToken())
	}
	return node
}

func readEquality_expr(parser *Parser) Node {
	var node Node
	switch parser.peekToken() {
	case token.IDENT, token.LPAREN, token.NOT, token.SUB, token.INT, token.CHAR, token.TRUE, token.FALSE, token.NULL, token.NEW, token.CHAR_TOK:
		node = Node{Type: "EqualityExpr"}
		node.addChild(readRelational_expr(parser))
		node.addChild(readEquality_expr_tail(parser))
	default:
		logger.Fatal("Unexpected token", "possible", "ident ( not - int char true false null new char", "got", parser.peekToken())
	}
	return node
}

func readEquality_expr_tail(parser *Parser) Node {
	var node Node
	switch parser.peekToken() {
	case token.EQL:
		parser.readToken()
		node = Node{Type: "EqualityExprTailEql"}
		node.addChild(readRelational_expr(parser))
		node.addChild(readEquality_expr_tail(parser))
	case token.NEQ:
		parser.readToken()
		node = Node{Type: "EqualityExprTailNeq"}
		node.addChild(readRelational_expr(parser))
		node.addChild(readEquality_expr_tail(parser))
	case token.SEMICOLON, token.RPAREN, token.OR, token.AND, token.THEN, token.NOT, token.COMMA, token.LOOP:
		node = Node{Type: "EqualityExprTail"}
	case token.PERIOD:
		node = Node{Type: "EqualityExprTailPeriod"}
		parser.readToken()
		expectTokens(parser, []any{token.PERIOD})
		parser.readToken()
	default:
		logger.Fatal("Unexpected token", "possible", "= /= ; ) or and then not , loop .", "got", parser.peekToken())
	}
	return node
}

func readRelational_expr(parser *Parser) Node {
	var node Node
	switch parser.peekToken() {
	case token.IDENT, token.LPAREN, token.NOT, token.SUB, token.INT, token.CHAR, token.TRUE, token.FALSE, token.NULL, token.NEW, token.CHAR_TOK:
		node = Node{Type: "RelationalExpr"}
		node.addChild(readAdditive_expr(parser))
		node.addChild(readRelational_expr_tail(parser))
	default:
		logger.Fatal("Unexpected token", "possible", "ident ( not - int char true false null new char", "got", parser.peekToken())
	}
	return node
}

func readRelational_expr_tail(parser *Parser) Node {
	var node Node
	switch parser.peekToken() {
	case token.LSS:
		parser.readToken()
		node = Node{Type: "RelationalExprTailLss"}
		node.addChild(readAdditive_expr(parser))
		node.addChild(readRelational_expr_tail(parser))
	case token.LEQ:
		parser.readToken()
		node = Node{Type: "RelationalExprTailLeq"}
		node.addChild(readAdditive_expr(parser))
		node.addChild(readRelational_expr_tail(parser))
	case token.GTR:
		parser.readToken()
		node = Node{Type: "RelationalExprTailGtr"}
		node.addChild(readAdditive_expr(parser))
		node.addChild(readRelational_expr_tail(parser))
	case token.GEQ:
		parser.readToken()
		node = Node{Type: "RelationalExprTailGeq"}
		node.addChild(readAdditive_expr(parser))
		node.addChild(readRelational_expr_tail(parser))
	case token.SEMICOLON, token.RPAREN, token.OR, token.AND, token.THEN, token.NOT, token.EQL, token.NEQ, token.COMMA, token.LOOP:
		node = Node{Type: "RelationalExprTail"}
	case token.PERIOD:
		node = Node{Type: "RelationalExprTailPeriod"}
		parser.readToken()
		expectTokens(parser, []any{token.PERIOD})
		parser.readToken()
	default:
		logger.Fatal("Unexpected token", "possible", "< <= > >= ; ) or and then not = /= , loop .", "got", parser.peekToken())
	}
	return node
}

func readAdditive_expr(parser *Parser) Node {
	var node Node
	switch parser.peekToken() {
	case token.IDENT, token.LPAREN, token.NOT, token.SUB, token.INT, token.CHAR, token.TRUE, token.FALSE, token.NULL, token.NEW, token.CHAR_TOK:
		node = Node{Type: "AdditiveExpr"}
		node.addChild(readMultiplicative_expr(parser))
		node.addChild(readAdditive_expr_tail(parser))
	default:
		logger.Fatal("Unexpected token", "possible", "ident ( not - int char true false null new char", "got", parser.peekToken())
	}
	return node
}

func readAdditive_expr_tail(parser *Parser) Node {
	var node Node
	switch parser.peekToken() {
	case token.ADD:
		parser.readToken()
		node = Node{Type: "AdditiveExprTailAdd"}
		node.addChild(readMultiplicative_expr(parser))
		node.addChild(readAdditive_expr_tail(parser))
	case token.SUB:
		parser.readToken()
		node = Node{Type: "AdditiveExprTailSub"}
		node.addChild(readMultiplicative_expr(parser))
		node.addChild(readAdditive_expr_tail(parser))
	case token.SEMICOLON, token.RPAREN, token.OR, token.AND, token.THEN, token.NOT, token.EQL, token.NEQ, token.LSS, token.LEQ, token.GTR, token.GEQ, token.COMMA, token.LOOP:
		node = Node{Type: "AdditiveExprTail"}
	case token.PERIOD:
		node = Node{Type: "AdditiveExprTailPeriod"}
		parser.readToken()
		expectTokens(parser, []any{token.PERIOD})
		parser.readToken()
	default:
		logger.Fatal("Unexpected token", "possible", "+ - ; ) or and then not = /= < <= > >= , loop .", "got", parser.peekToken())
	}
	return node
}

func readMultiplicative_expr(parser *Parser) Node {
	var node Node
	switch parser.peekToken() {
	case token.IDENT, token.LPAREN, token.NOT, token.SUB, token.INT, token.CHAR, token.TRUE, token.FALSE, token.NULL, token.NEW, token.CHAR_TOK:
		node = Node{Type: "MultiplicativeExpr"}
		node.addChild(readUnary_expr(parser))
		node.addChild(readMultiplicative_expr_tail(parser))
	default:
		logger.Fatal("Unexpected token", "possible", "ident ( not - int char true false null new char", "got", parser.peekToken())
	}
	return node
}

func readMultiplicative_expr_tail(parser *Parser) Node {
	var node Node
	switch parser.peekToken() {
	case token.MUL:
		parser.readToken()
		node = Node{Type: "MultiplicativeExprTailMul"}
		node.addChild(readUnary_expr(parser))
		node.addChild(readMultiplicative_expr_tail(parser))
	case token.QUO:
		parser.readToken()
		node = Node{Type: "MultiplicativeExprTailQuo"}
		node.addChild(readUnary_expr(parser))
		node.addChild(readMultiplicative_expr_tail(parser))
	case token.REM:
		parser.readToken()
		node = Node{Type: "MultiplicativeExprTailRem"}
		node.addChild(readUnary_expr(parser))
		node.addChild(readMultiplicative_expr_tail(parser))
	case token.SEMICOLON, token.RPAREN, token.OR, token.AND, token.THEN, token.NOT, token.EQL, token.NEQ, token.LSS, token.LEQ, token.GTR, token.GEQ, token.ADD, token.SUB, token.COMMA, token.LOOP:
		node = Node{Type: "MultiplicativeExprTail"}
	case token.PERIOD:
		node = Node{Type: "MultiplicativeExprTailPeriod"}
		parser.readToken()
		expectTokens(parser, []any{token.PERIOD})
		parser.readToken()
	default:
		logger.Fatal("Unexpected token", "possible", "* / rem ; ) or and then not = /= < <= > >= + - , loop .", "got", parser.peekToken())
	}
	return node
}

func readUnary_expr(parser *Parser) Node {
	var node Node
	switch parser.peekToken() {
	case token.SUB:
		parser.readToken()
		node = Node{Type: "UnaryExprSub"}
		node.addChild(readUnary_expr(parser))
	case token.IDENT, token.LPAREN, token.NOT, token.INT, token.CHAR, token.TRUE, token.FALSE, token.NULL, token.NEW, token.CHAR_TOK:
		node = Node{Type: "UnaryExpr"}
		node.addChild(readPrimary_expr(parser))
	default:
		logger.Fatal("Unexpected token", "possible", "- ident ( not int char true false null new char", "got", parser.peekToken())
	}
	return node
}
